[package]
name = "rblib-world-chain"
version = "0.1.0"
edition = "2024"
authors = ["Alessandro Mazza <alessandro98.mazza@gmail.com>"]

[dependencies]
# world-chain
world-chain-node = { path = "/Users/alessandro.mazza/work/world-chain/crates/world/node" }

# rblib
rblib = { path = "/Users/alessandro.mazza/work/rblib" }
# rblib = { git = "https://github.com/flashbots/rblib", features = [ "optimism" ], tag = "v0.4.1" }

# alloy
alloy-op-evm = { version = "0.23.0", default-features = false }
alloy-rlp = { version = "0.3.12", default-features = false }
alloy-serde = { version = "1.1.2", default-features = false }

# reth
reth-optimism-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }

# misc
serde = "1.0.228"
tracing = "0.1.43"
dashmap = "6.1.0"
parking_lot = "0.12.5"
atomic-time = "0.1.5"
chrono = "0.4.42"
thiserror = "2.0.17"
eyre = "0.6.12"
tokio = "1.48.0"
serde_json = "1.0.145"
# ed25519-dalek = "2.2.0"

[dev-dependencies]
rblib = { path = "/Users/alessandro.mazza/work/rblib", features = ["test-utils" ] }
